--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "CURSOJSTYPESCRIPT",
+  "name": "cursojstypescript",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,6 +10,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
+  },
+  "dependencies": {
+    "@types/node": "^20.1.3"
   }
 }
