--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^20.8.2",
+    "@types/validator": "^13.11.2",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
     "eslint": "^8.44.0",
@@ -24,7 +26,7 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
-    "@types/node": "^20.1.3",
-    "eslint-config-prettier": "^8.8.0"
+    "eslint-config-prettier": "^8.8.0",
+    "validator": "^13.11.0"
   }
 }
