--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/lodash": "^4.14.200",
     "@types/node": "^20.8.2",
-    "@types/validator": "^13.11.2",
+    "@types/validator": "^13.11.5",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
     "eslint": "^8.44.0",
@@ -27,6 +28,7 @@
   },
   "dependencies": {
     "eslint-config-prettier": "^8.8.0",
+    "lodash": "^4.17.21",
     "validator": "^13.11.0"
   }
 }
